[package]
name = "rastro"
description = "Astronomy and astrophysics library for Rust"
version = "0.1.0"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
keywords = ["astronomy", "astrophysics", "science", "physics", "mathematics"]
homepage = "https://github.com/besok/rastro"
repository = "https://github.com/besok/rastro"
categories= ["algorithms", "science" ]

[dependencies]
plotters="0.3.6"
toml = "0.8.13"
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.10.5"

[dependencies.uom]
version = "0.36.0"
default-features = false
features = ["std", "si", "f64"]